# foomatic-db

./: COPYING  ChangeLog  ChangeLog.txt  Makefile.in  OKB440_a.ppd  README  TODO  USAGE  acinclude.m4  configure.ac  configure.in  makeMan.in  make_configure  ppdtoxml  ppdtoxml.conf  sanitize-ppd-names
.github/workflows/: create-tag.yml
db/: oldprinterids
db/source/PPD/: bzrAddPPD.sh  bzrAddXML.sh  generateBZRScript.sh
db/source/PPD/Brother/: BR2600CN_GPL.ppd  BR2700_2_GPL.ppd  BR3450CN_GPL.ppd  BR5050_2_GPL.ppd  BR5070DN_GPL.ppd  BR5070_2_GPL.ppd  BR5150_2_GPL.ppd  BR5170_2_GPL.ppd  BR5240_2_GPL.ppd  BR5250_2_GPL.ppd  BR5270_2_GPL.ppd  BR6050D2_GPL.ppd  BR6050_2_GPL.ppd  BR7025_2_GPL.ppd  BR7050_2_GPL.ppd  BR7225_2_GPL.ppd  BR7820_2_GPL.ppd  BR8020_2_GPL.ppd  BR8025_2_GPL.ppd  BR8040_2_GPL.ppd  BR8045_2_GPL.ppd  BR8050_2_GPL.ppd  BR8220_2_GPL.ppd  BR8420_2_GPL.ppd  BR8440_2_GPL.ppd  BR8640_2_GPL.ppd  BR8820_2_GPL.ppd  BR8840_2_GPL.ppd  BR9420_2_GPL.ppd  BRHL14_1_GPL.ppd  BRHL14_2_GPL.ppd  BRHL16_2_GPL.ppd  BRHL18_2_GPL.ppd  BRHL24_2_GPL.ppd  BRHL32_3_GPL.ppd
db/source/PPD/Canon/: cnadv4025x1g.ppd  cnadv4045x1g.ppd  cnadv4225x1g.ppd  cnadv4245x1g.ppd  cnadv6055x1g.ppd  cnadv6075x1g.ppd  cnadv6255x1g.ppd  cnadv6275x1g.ppd  cnadv8085x1g.ppd  cnadv8105x1g.ppd  cnadv8205x1g.ppd  cnadv8285x1g.ppd  cnadvc2020x1g.ppd  cnadvc2025x1g.ppd  cnadvc2030x1g.ppd  cnadvc2220x1g.ppd  cnadvc2225x1g.ppd  cnadvc250x1g.ppd  cnadvc3320x1g.ppd  cnadvc3325x1g.ppd  cnadvc332lx1g.ppd  cnadvc351x1g.ppd  cnadvc5030x1g.ppd  cnadvc5045x1g.ppd  cnadvc5235x1g.ppd  cnadvc5250x1g.ppd  cnadvc7055x1g.ppd  cnadvc7260x1g.ppd  cnadvc7280x1g.ppd  cnadvc9060x1g.ppd  cnadvc9065x1g.ppd  cnadvc9270x1g.ppd  cnl667x1g.ppd  cnl668x1g.ppd  cnl678x1g.ppd  cnl710cx1g.ppd  cnl712cx1g.ppd  cnl766x1g.ppd  cnl768x1g.ppd  cnl778x1g.ppd  (+5 more)
db/source/PPD/Dell/: dl3100cn.ppd
db/source/PPD/Epson/: epal2600.ppd  epalc190.ppd  epalc200.ppd  epalc260.ppd  epalc280.ppd  epalc380.ppd  epalc400.ppd  epalc410.ppd  epalc420.ppd  epalc860.ppd  epalc910.ppd  epalc920.ppd  epalcx21.ppd  epalm200.ppd  epalm201.ppd  epalm240.ppd  epalm241.ppd  epalm400.ppd  epalm800.ppd  epalmx20.ppd  epalmx21.ppd  epl5900.ppd  epl6100.ppd  epl6200.ppd  epln2500.ppd  epln2550.ppd  epln2700.ppd  epln3000.ppd  epln7000.ppd  eplp830c.ppd  eplp850c.ppd  eplp880c.ppd  eplp9100.ppd  eplp920c.ppd  eplp950c.ppd  eplp960s.ppd  eplp980c.ppd  secc3900.ppd
db/source/PPD/HP/: HP_Business_Inkjet_2250.ppd  HP_Business_Inkjet_2280.ppd  HP_Business_Inkjet_2600.ppd  HP_Business_Inkjet_2800.ppd  HP_Business_Inkjet_3000.ppd  HP_CM8050_CM8060_MFP.ppd  HP_Color_LaserJet.ppd  HP_Color_LaserJet_2550.ppd  HP_Color_LaserJet_2605.ppd  HP_Color_LaserJet_2700.ppd  HP_Color_LaserJet_2800.ppd  HP_Color_LaserJet_3000.ppd  HP_Color_LaserJet_3800.ppd  HP_Color_LaserJet_4500.ppd  HP_Color_LaserJet_4550.ppd  HP_Color_LaserJet_4700.ppd  HP_Color_LaserJet_4730_MFP.ppd  HP_Color_LaserJet_5550.ppd  HP_Color_LaserJet_5M.ppd  HP_Color_LaserJet_8500.ppd  HP_Color_LaserJet_8550.ppd  HP_Color_LaserJet_CM1015.ppd  HP_Color_LaserJet_CM4730_MFP.ppd  HP_Color_LaserJet_CP3505.ppd  HP_Color_LaserJet_CP4005.ppd  HP_DesignJet_3500CP_PS3.ppd  HP_Designjet_5000_PS3.ppd  HP_Designjet_5500_PS3.ppd  HP_Designjet_800_PS3.ppd  HP_LaserJet_1200.ppd  HP_LaserJet_1220.ppd  HP_LaserJet_1320_Series.ppd  HP_LaserJet_2100_Series.ppd  HP_LaserJet_2200.ppd  HP_LaserJet_2410.ppd  HP_LaserJet_2420.ppd  HP_LaserJet_2430.ppd  HP_LaserJet_3050.ppd  HP_LaserJet_3052.ppd  HP_LaserJet_3200.ppd  (+62 more)
db/source/PPD/KONICA_MINOLTA/: KO1050UX.ppd  KO500UX.ppd  KO750UX.ppd  KOC250UX.ppd  KOC252UX.ppd  KOC351UX.ppd  KOC352UX.ppd  KOC450UX.ppd  KOC451FX.ppd  KOC451GX.ppd  KOC451IX.ppd  KOC451JX.ppd  KOC451KX.ppd  KOC451SCX.ppd  KOC451SX.ppd  KOC451TCX.ppd  KOC451UX.ppd  KOC550UX.ppd
db/source/PPD/Kyocera/: ReadMe.htm  kyocera_ppd_8.2.txt
db/source/PPD/Lexmark/: Lexmark_6500e_Series.ppd  Lexmark_B2300_Series.ppd  Lexmark_B2400_Series.ppd  Lexmark_B2500_Series.ppd  Lexmark_B2600_Series.ppd  Lexmark_B2860_Series.ppd  Lexmark_C2100_Series.ppd  Lexmark_C2200_Series.ppd  Lexmark_C2300_Series.ppd  Lexmark_C2400_Series.ppd  Lexmark_C2500_Series.ppd  Lexmark_C3400_Series.ppd  Lexmark_C4100_Series.ppd  Lexmark_C510.ppd  Lexmark_C520.ppd  (+153 more)
db/source/driver/: PDF-Gestetner.xml  PDF-Infotec.xml  PDF-Lanier.xml  PDF-NRG.xml  PDF-Ricoh.xml  PDF-Savin.xml  PM760p.upp.xml  PM760pX.upp.xml  PM760pl.upp.xml  PM820p.upp.xml  PM820pX.upp.xml  PM820pl.upp.xml  Postscript-Brother.xml  Postscript-Canon.xml  Postscript-Epson.xml  Postscript-Gestetner.xml  Postscript-HP.xml  Postscript-InfoPrint.xml  Postscript-Infotec.xml  Postscript-KONICA_MINOLTA.xml  Postscript-Kyocera.xml  Postscript-Lanier.xml  Postscript-Lexmark.xml  Postscript-NRG.xml  Postscript-Oce.xml  Postscript-Oki.xml  Postscript-Ricoh.xml  Postscript-Samsung.xml  Postscript-Savin.xml  Postscript-Sharp.xml  Postscript-Toshiba.xml  Postscript.xml  Postscript1.xml  Postscript2-Oce.xml  PostscriptColor-Ricoh.xml  PostscriptMono-Ricoh.xml  Stc670p.upp.xml  Stc670pX.upp.xml  Stc670pl.upp.xml  Stc680p.upp.xml  (+337 more)
db/source/opt/: 1.xml  10.xml  100.xml  101.xml  102.xml  103.xml  104.xml  105.xml  106.xml  107.xml  108.xml  109.xml  110.xml  111.xml  112.xml  113.xml  114.xml  115.xml  116.xml  117.xml  118.xml  119.xml  12.xml  120.xml  121.xml  122.xml  123.xml  124.xml  125.xml  126.xml  127.xml  128.xml  129.xml  13.xml  130.xml  131.xml  132.xml  133.xml  134.xml  135.xml  (+431 more)
db/source/printer/: 100576.xml  100704.xml  101152.xml  101952.xml  102080.xml  102304.xml  105504.xml  106848.xml  108128.xml  108320.xml  108896.xml  109440.xml  110464.xml  110624.xml  111392.xml  112832.xml  112864.xml  113312.xml  113888.xml  114016.xml  114592.xml  114656.xml  114816.xml  115488.xml  116128.xml  116256.xml  117472.xml  121952.xml  122016.xml  122048.xml  122080.xml  122336.xml  122496.xml  123584.xml  123776.xml  123968.xml  125024.xml  125408.xml  125632.xml  125696.xml  (+7327 more)
debian/: README.Debian  changelog  control  copyright  dirs  rules  watch
xmlschema/: driver.xsd  option.xsd  printer.xsd  types.xsd
(+7619 files in other folders)
