dnl Process this file with autoconf to produce a configure script.
AC_INIT(db/source/driver/ljet4.xml)

dnl If the user didn't specify the $sysconfdir on the command line, let it
dnl be /etc, not /usr/local/etc or /usr/etc
if [[ x$sysconfdir == 'x${prefix}/etc' ]]; then
  sysconfdir=/etc
fi

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl AC_OUTPUT(Makefile src/Makefile)
AC_OUTPUT(Makefile)

dnl Finished
echo "Finished configuring."
dnl echo "Type 'make' to build the package"
dnl echo "then 'make install' to install it."
echo "Type 'make install' to install the package."
